GH-10073 fix: make purchase limit type visible

--- a/feature-libs/organization/administration/styles/_form.scss
+++ b/feature-libs/organization/administration/styles/_form.scss
@@ -18,6 +18,7 @@
     }
     @include media-breakpoint-down(sm) {
       flex: 100%;
+      font-size: small !important;
     }
     padding-inline-end: 20px;
     padding-bottom: 10px;
@@ -25,6 +26,11 @@
 
     .form-check {
       margin: 0;
+    }
+    .ng-value {
+      @include media-breakpoint-down(sm) {
+        white-space: normal !important;
+      }
     }
   }
 
